# dummy_robot

./: CMakeLists.txt  README.md  USING_REUSABLE_BEHAVIORS_EXAMPLE.md  package.xml  thirdparty.repos
behaviors/: dummy_state1.xml  dummy_state2.xml
config/: clinic_mcp.yaml  dummy_mission.yaml  dummy_mission_with_follow.yaml  dummy_robot_config.yaml  dummy_robot_llm_config.yaml  dummy_robot_skills.yaml  dummy_robot_with_follow.yaml  guide_mission.yaml  guide_mission_mcp.yaml  llm_mission.yaml  llm_mission_2.yaml  pickup_mcp.yaml  static_transforms.yaml  waiter_mission.yaml  waiter_mission_checking.yaml  waiter_mission_checking_mcp.yaml
include/dummy_robot/: dummy_robot_orchestrator.hpp
include/dummy_robot/bt_nodes/: log_message_action.hpp
launch/: dummy_robot.launch.py  dummy_robot_action_executor.launch.py  dummy_robot_llm.launch.py  dummy_robot_mission_executor.launch.py  dummy_robot_with_follow.launch.py
src/: dummy_robot_main.cpp  dummy_robot_orchestrator.cpp
src/bt_nodes/: bt_plugins.cpp  log_message_action.cpp
