<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy_robot</name>
  <version>0.1.0</version>
  <description>Example robot behavior package using behavior_architecture</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ament_index_cpp</depend>
  <depend>behavior_architecture</depend>
  <depend>yaml-cpp</depend>
  <depend>behaviortree_cpp</depend>
  <exec_depend>dummy_bt_nodes</exec_depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
